--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,8 @@
     "com.ltx.channeled-properties": "1.0.0",
     "com.ltx.singletons": "1.0.1",
     "com.ltx.tools": "1.0.1",
+    "com.unity.2d.animation": "10.1.4",
+    "com.unity.2d.psdimporter": "9.0.3",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.cinemachine": "3.1.2",
     "com.unity.collab-proxy": "2.5.2",
