--- a/Assets/Scripts/Miiplaza/Historic.Game.asmdef
+++ b/Assets/Scripts/Miiplaza/Historic.Game.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:6f42ce528ce4a90448281858b0f6cc42",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
