--- a/Assets/Scripts/Core/VraiOuFaux.Core.asmdef
+++ b/Assets/Scripts/Core/VraiOuFaux.Core.asmdef
@@ -2,7 +2,9 @@
     "name": "VraiOuFaux.Core",
     "rootNamespace": "VraiOuFaux.Core",
     "references": [
-        "GUID:776d03a35f1b52c4a9aed9f56d7b4229"
+        "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:7f6fdd18b438ff245b7f869ddfb77b44"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
