--- a/Assets/Scripts/Miiplaza/Historic.Game.asmdef
+++ b/Assets/Scripts/Miiplaza/Historic.Game.asmdef
@@ -1,10 +1,11 @@
 {
     "name": "Historic.Game",
-    "rootNamespace": "",
+    "rootNamespace": "Historic.Game",
     "references": [
         "GUID:6f42ce528ce4a90448281858b0f6cc42",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:7f6fdd18b438ff245b7f869ddfb77b44"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
