--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.feature.development": "1.0.2",
     "com.unity.formats.fbx": "5.1.2",
     "com.unity.inputsystem": "1.11.2",
+    "com.unity.localization": "1.5.4",
     "com.unity.memoryprofiler": "1.1.1",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.probuilder": "6.0.4",
