--- a/Assets/Scripts/Core/VraiOuFaux.Core.asmdef
+++ b/Assets/Scripts/Core/VraiOuFaux.Core.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:7f6fdd18b438ff245b7f869ddfb77b44"
+        "GUID:7f6fdd18b438ff245b7f869ddfb77b44",
+        "GUID:eec0964c48f6f4e40bc3ec2257ccf8c5",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
