--- a/Assets/Scripts/Core/VraiOuFaux.Core.asmdef
+++ b/Assets/Scripts/Core/VraiOuFaux.Core.asmdef
@@ -6,7 +6,8 @@
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:7f6fdd18b438ff245b7f869ddfb77b44",
         "GUID:eec0964c48f6f4e40bc3ec2257ccf8c5",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:84651a3751eca9349aac36a66bba901b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
